commit tree 8a3a43cf5e4c34b20a7dcc9a9304b29670e7beb0

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,17 @@
 <h1>Make your form here</h1>
+
+<form method="POST" action="/pirates">
+    <label for="name"> Pirate Name: <input type="text" id="name" name="pirate[name]"></label><br>
+    <label for="weight"> Pirate Weight: <input type="text" id="weight" name="pirate[weight]"></label><br>
+    <label for="age"> Pirate Height: <input type="text" id="height" name="pirate[height]"></label><br>
+
+    <label for="name">First Ship's Name: <input type="text" id="ship_name_1" name="pirate[ships][][name]"></label><br>
+    <label for="name">First Ship's Type: <input type="text" id="ship_type_1" name="pirate[ships][][type]"></label><br>
+    <label for="name">First Ship's Booty: <input type="text" id="ship_booty_1" name="pirate[ships][][booty]"></label><br>
+
+    <label for="name">Second Ship's Name: <input type="text" id="ship_name_2" name="pirate[ships][][name]"></label><br>
+    <label for="name">Second Ship's Type: <input type="text" id="ship_type_2" name="pirate[ships][][type]"></label><br>
+    <label for="name">Second Ship's Booty: <input type="text" id="ship_booty_2" name="pirate[ships][][booty]"></label><br>
+
+    <input type="submit" value="Submit">
+  </form>
